# langchain-google-datastore-python

./: .repo-metadata.json  CHANGELOG.md  DEVELOPER.md  README.md  README.rst  integration.cloudbuild.yaml  noxfile.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  blunderbuss.yml  sync-repo-settings.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml  lint.yml
.kokoro/: build.sh  publish-docs.sh  release.sh  requirements.txt
.kokoro/docker/docs/: requirements.txt
.kokoro/docs/: common.cfg  docs-presubmit.cfg
.kokoro/release/: common.cfg
docs/: chat_message_history.ipynb  conf.py  document_loader.ipynb  index.rst
docs/langchain_google_datastore/: history.rst  loader.rst
src/langchain_google_datastore/: __init__.py  chat_message_history.py  common.py  document_converter.py  document_loader.py
src/langchain_google_datastore/utility/: document_converter.py
src/tests/unit_tests/: conftest.py  test_chat_message_history.py  test_document_converter.py  test_document_loader.py
tests/unit_tests/: conftest.py  test_chat_message_history.py  test_document_converter.py  test_document_loader.py
