[project]
name = "langchain-google-datastore"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud Datastore"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "langchain-core>=0.1.1, <1.0.0",
    "langchain-community>=0.0.18, <1.0.0",
    "google-cloud-datastore>=2.19.0, <3.0.0",
    "more_itertools>=10.2.0, <11.0.0",
]

[tool.setuptools.dynamic]
version = {attr = "langchain_google_datastore.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-datastore-python"
Repository = "https://github.com/googleapis/langchain-google-datastore-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-datastore-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-datastore-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black[jupyter]==23.12.1",
    "isort==5.13.2",
    "mypy==1.9.0",
    "pytest-asyncio==0.23.5.post1",
    "pytest==7.4.4"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
