[project]
name = "langchain-google-datastore"
dynamic = ["version"]
description = "LangChain integrations for Google Cloud Datastore"
readme = "README.rst"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Google LLC", email = "googleapis-packages@google.com"}
]
dependencies = [
    "langchain-core>=0.1.1, <1.0.0",
    "langchain-community>=0.0.18, <1.0.0",
    "google-cloud-datastore>=2.19.0, <3.0.0",
    "more_itertools>=10.2.0, <11.0.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[tool.setuptools.dynamic]
version = {attr = "langchain_google_datastore.version.__version__"}

[project.urls]
Homepage = "https://github.com/googleapis/langchain-google-datastore-python"
Repository = "https://github.com/googleapis/langchain-google-datastore-python.git"
"Bug Tracker" = "https://github.com/googleapis/langchain-google-datastore-python/issues"
Changelog = "https://github.com/googleapis/langchain-google-datastore-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "black[jupyter]==24.10.0",
    "isort==7.0.0",
    "mypy==1.13.0",
    "pytest-asyncio==0.24.0",
    "pytest==8.3.3",
    "pytest-cov==5.0.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py39']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true

exclude = [
    'docs/*',
    'noxfile.py'
]
